[package]
name = "taiyi-underwriter"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
axum = { workspace = true }
blst = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
mockall = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
taiyi-contracts = { workspace = true }
taiyi-crypto = { workspace = true }
taiyi-primitives = { workspace = true }
tracing = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
eyre = { workspace = true }

