[package]
name = "taiyi-zkvm-types"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
ssz_rs = { workspace = true }
thiserror = { workspace = true }
taiyi-primitives = { workspace = true }
