[package]
name = "taiyi-zkvm-types"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "consensus",
    "sol-types",
    "signers",
]}
serde = { workspace = true }
ssz_rs = { workspace = true }
thiserror = { workspace = true }
taiyi-primitives = { workspace = true }
