[package]
name = "type_b"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-contract = { workspace = true }
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
beacon-api-client = { workspace = true }
taiyi-primitives = { workspace = true }

eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
