[package]
name = "type_b"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
taiyi-primitives = { workspace = true }

eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
